documentacion y areglos a las peticiones empresa show y index, vista de Json en documentacion de la vista welcome
