# app/Http/Controllers/EmpresaController.php
@@ -23,7 +23,7 @@ class EmpresaController extends Controller
 
     
     /**
-* show Empresa
+* index Empresa
 * @OA\Get(
 *     path="/api/v1/empresa",
 *     summary="Obtines una paginacion con 10 registros ",
@@ -202,35 +202,41 @@ class EmpresaController extends Controller
 
 
     /**
-* show  empresa 
+* Mostramos la empresa especificada por el id
 * @OA\Get(
 *     path="/api/v1/empresa/{id}",
-*     summary="Se muestra un solo registro Empresa ",
+*     summary="Obtienes los datos del registro empresa ",
 *     tags={"Empresa"},
-*     @OA\parameter(
-*       name="id",
-*       in="path",
-*       required=false   
-*        ),
-
+*
 *     @OA\Response(
 *         response=200,
-*         description="Oferta laboral encontrada",
+*         description="Empresa encontrada",
 *         @OA\JsonContent(
-*             @OA\Property(property="success", type="boolean", example=false),
-*             @OA\Property(property="id", type="integer", example=3),
-*             @OA\Property(property="name", type="string", example="closed"),
-*             @OA\Property(property="email", type="string", example=" oferta laboral cerrada"),
-*             @OA\Property(property="avatar", type="string", example="comercio exterior"),
-*             @OA\Property(property="address", type="string", example="street brlmoor #3453"),
-*             @OA\Property(property="rubro", type="string", example="transporte comercio local"),
-*             @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
-*             @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
-* 
+*                
+*                    @OA\Property(property="success", type="boolean"),
+*                @OA\Property(property="status", type="integer"),
+*                @OA\Property(property="message", type="string"),
+*                @OA\Property(property="data", 
+*                                      
+*                                      @OA\Property(property="id", type="integer", example=3),
+*                                      @OA\Property(property="name", type="string", example=" cencocud"),
+*                                      @OA\Property(property="email", type="string", example=" oferta laboral cerrada"),
+*                                      @OA\Property(property="avatar", type="string", example="comercio exterior"),
+*                                      @OA\Property(property="address", type="string", example="street brlmoor #3453"),
+*                                      @OA\Property(property="rubro", type="string", example="transporte comercio local"),
+*                                      @OA\Property( property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
+*                                      @OA\Property( property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
+*                          ),
+*                @OA\Property(property="errors", type="object", nullable=true),
+*                @OA\Property(property="meta",type="object", nullable=true )
+*                       
+*                       
+*            
 *         )
 *      )
+*
 *     
-*  )
+* )
 *
 */
     public function show($id)
@@ -240,16 +246,22 @@ class EmpresaController extends Controller
         try{
             $Empresa = Empresa::findorfail($id);
 
-            return $Empresa->toJson();
+
+
+
+            return ResponseService::success(
+                $Empresa,
+                "Empresa encontrada",
+                200
+                
+             );
 
          } catch (Exception $th) {
-             return response()->json([
-
-                 'success'=> false,
-                 'message' => $th->getMessage()
-
-
-             ], 400);
+             return ResponseService::Error(
+                "error al buscar la empresa",
+                400,
+                $th->getMessage()
+             );
          }
 
 
